<resources>
    <string name="app_name">CapyMail</string>

    <!-- Main -->

    <string name="esqueceu_a_senha">esqueceu a senha?</string>
    <string name="login">Entre agora</string>
    <string name="criar_conta">Crie sua conta</string>
    <string name="saudaçoes">CapyMail</string>
    <string name="frase">Seus emails tranquilos como uma capivara</string>
    <string name="rodape">CapyMail é um projeto criado pelos brabos do CCO</string>
    <string name="logo">logo</string>

    <string name="titulo">Crie sua conta</string>

    <!-- Sign in 1 -->
    <string name="paragrafo">Que bom ter você aqui</string>
    <string name="paragrafo2">Para começar, nos diga o seu nome completo</string>
    <string name="nomeExemplo">Nome completo</string>

    <!-- Sign in 2 -->
    <string name="paragrafo3">Você tambem pode adicionar uma foto para seu perfil</string>

    <!-- Sign in 3 -->
    <string name="paragrafo4">Olá {usuario}. Para proseguir, digite seu email para cadastro</string>

    <string name="email_exemplo">Email@exemplo.com</string>
    <string name="senha">Digite uma senha</string>
    <string name="hint_senha">senha</string>
    <string name="parabens">Parabens!</string>
    <string name="texto">Você concluiu seu registro</string>
    <string name="desc">Agora deixe que nossas capivaras cuidem do resto</string>
    <string name="text_botao">Voltar para o inicio</string>
    <string name="button">Avançar</string>

    <!-- Sign in 3 -->
    <string name="conecte">Conecte os seu emails</string>
    <string name="texto3">Para aproveitar o CapyMail, Conecte algum email a sua conta</string>
    <string name="gmail">Gmail</string>
    <string name="outlook">Outlook</string>
    <string name="thunderbird">td bird</string>

    <string name="titulo2">Entre na sua conta</string>
    <string name="texto1">Digite seu email</string>
    <string name="texto2">Digite sua senha</string>
</resources>