<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/saudaçoes"
            android:layout_width="wrap_content"
            android:theme="@style/title"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="108dp"
            android:layout_marginTop="74dp"
            android:gravity="center"
            android:text="@string/saudaçoes" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="31dp"
            android:layout_toEndOf="@+id/saudaçoes"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/frase"
            android:layout_width="match_parent"
            android:theme="@style/body"
            android:layout_height="38dp"
            android:layout_below="@+id/saudaçoes"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/frase" />
    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        style="@style/card2"
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="90dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/criar_conta"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingVertical="20dp"
                android:text="@string/criar_conta"
                android:textColor="@color/white"
                app:cornerRadius="25dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:paddingVertical="20dp"
                android:text="@string/login"
                android:textColor="@color/white"
                app:cornerRadius="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/esqueceu_a_senha"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/rodape"
                android:textColor="@color/textColor2" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>