<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConectarEmails">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp">

            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conecte" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto3"
                style="@style/text"
                android:layout_marginHorizontal="60dp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_gmail"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:drawableTop="@drawable/gmail"
                    app:backgroundTint="@color/colorSecondary"
                    android:text="@string/gmail"
                    android:textSize="11sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_outlook"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:drawableTop="@drawable/outlook"
                    android:layout_marginHorizontal="15dp"
                    app:backgroundTint="@color/colorSecondary"
                    android:text="@string/outlook"
                    android:textSize="11sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_td_bird"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:drawableTop="@drawable/thunderbird"
                    app:backgroundTint="@color/colorSecondary"
                    android:text="@string/thunderbird"
                    android:textSize="11sp"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_next"
        style="@style/buttonRounded"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/button"
        android:foreground="@drawable/arrow_next"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintEnd_toEndOf="@+id/card" />

</androidx.constraintlayout.widget.ConstraintLayout>