<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/saudaçoes"
            android:layout_width="266dp"
            android:layout_height="38dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@+id/imageView"
            android:gravity="center"
            android:text="@string/saudaçoes"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />


        <TextView
            android:id="@+id/frase"
            android:layout_width="266dp"
            android:layout_height="38dp"
            android:layout_below="@+id/saudaçoes"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:gravity="center_horizontal"
            android:text="@string/frase"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        style="@style/card2"
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/criar_conta"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="15dp"
                android:text="@string/criar_conta"
                android:textColor="@color/white"
                app:cornerRadius="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                android:text="@string/login"
                android:textColor="@color/white"
                app:cornerRadius="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/esqueceu_a_senha"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/rodape"
                android:textSize="15sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>