<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn3"
    android:background="@color/background2">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"/>

            <TextView
                android:id="@+id/paragrafo"
                style="@style/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/paragrafo4" />

            <EditText
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="@string/email_exemplo"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_next"
        style="@style/buttonRounded"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/button"
        android:foreground="@drawable/arrow_next"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintEnd_toEndOf="@+id/card" />
</androidx.constraintlayout.widget.ConstraintLayout>