<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".criarConta"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/titulo1"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                style="@style/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/paragrafo"
                android:textSize="16sp" />

            <TextView
                style="@style/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="15dp"
                android:text="@string/digite"
                android:textSize="16sp" />

            <EditText
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="@string/email_exemplo"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <TextView
                style="@style/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:text="@string/senha"
                android:textSize="16sp" />

            <EditText
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:drawablePadding="20dp"
                android:hint="@string/hint_senha"
                android:inputType="numberPassword"
                android:padding="15dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botao"
        style="@style/button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/button"
        android:foreground="@drawable/arrow_next"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="m" />
</androidx.constraintlayout.widget.ConstraintLayout>