<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn2">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/criar_conta" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/paragrafo3" />

            <ImageButton
                style="@style/input2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                tools:ignore="SpeakableTextPresentCheck"
                android:src="@drawable/ic_baseline_photo_24"
                />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_next"
        style="@style/buttonRounded"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:foreground="@drawable/arrow_next"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintEnd_toEndOf="@+id/card"
        android:contentDescription="@string/button" />
</androidx.constraintlayout.widget.ConstraintLayout>